--- a/less/style-basic.less
+++ b/less/style-basic.less
@@ -22,6 +22,7 @@
 @color-red-lighter: #d4454c;
 @color-red-divider: #b62837;
 @color-gray: #edeff1;
+@color-gray-background: #f5f5f5;
 
 @viewport {
 	zoom: 0.75;
@@ -126,6 +127,14 @@ h2 {
 			display: none;
 		}
 	}
+}
+
+.popup-wrapper .popup-content-wrapper .page-content {
+	background: @color-gray-background;
+}
+
+.table-wrapper {
+	background: #fff;
 }
 
 audio::-webkit-media-controls {
