--- a/less/style-basic.less
+++ b/less/style-basic.less
@@ -22,6 +22,7 @@
 @color-red-lighter: #d4454c;
 @color-red-divider: #b62837;
 @color-gray: #edeff1;
+@color-gray-border: #d1d1d1;
 @color-gray-background: #f5f5f5;
 
 @viewport {
