Polyfill parse_query_string. Stöd för type if app router

--- a/less/style-basic.less
+++ b/less/style-basic.less
@@ -130,6 +130,10 @@ h2 {
 	}
 }
 
+.popup-wrapper .popup-content-wrapper .page-content .container-header {
+	background-image: none;
+}
+
 .popup-wrapper .popup-content-wrapper .page-content {
 	background: @color-gray-background;
 }
